--- a/gd-clean.ipynb
+++ b/gd-clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,39 +22,40 @@
        "       'Overall Appearance Rating.3', 'Eriogonum umbellatum',\n",
        "       'Foliage Rating.4', 'Flowering Rating.4',\n",
        "       'Pest Tolerance/Disease Resistance Rating.4', 'Vigor Rating.4',\n",
-       "       'Overall Appearance Rating.4', 'Foliage Rating.5', 'Flowering Rating.5',\n",
+       "       'Overall Appearance Rating.4', 'Eschscholzia californica',\n",
+       "       'Foliage Rating.5', 'Flowering Rating.5',\n",
        "       'Pest Tolerance/Disease Resistance Rating.5', 'Vigor Rating.5',\n",
-       "       'Overall Appearance Rating.5', 'Eschscholzia californica',\n",
+       "       'Overall Appearance Rating.5', 'Festuca californica',\n",
        "       'Foliage Rating.6', 'Flowering Rating.6',\n",
        "       'Pest Tolerance/Disease Resistance Rating.6', 'Vigor Rating.6',\n",
-       "       'Overall Appearance Rating.6', 'Festuca californica',\n",
-       "       'Foliage Rating.7', 'Flowering Rating.7',\n",
-       "       'Pest Tolerance/Disease Resistance Rating.7', 'Vigor Rating.7',\n",
-       "       'Overall Appearance Rating.7', 'Festuca idahoensis', 'Foliage Rating.8',\n",
-       "       'Flowering Rating.8', 'Pest Tolerance/Disease Resistance Rating.8',\n",
-       "       'Vigor Rating.8', 'Overall Appearance Rating.8', 'Mimulus bifidus',\n",
-       "       'Foliage Rating.9', 'Flowering Rating.9',\n",
-       "       'Pest Tolerance/Disease Resistance Rating.9', 'Vigor Rating.9',\n",
-       "       'Overall Appearance Rating.9', 'Monardella villosa',\n",
-       "       'Foliage Rating.10', 'Flowering Rating.10',\n",
+       "       'Overall Appearance Rating.6', 'Festuca idahoensis', 'Foliage Rating.7',\n",
+       "       'Flowering Rating.7', 'Pest Tolerance/Disease Resistance Rating.7',\n",
+       "       'Vigor Rating.7', 'Overall Appearance Rating.7', 'Mimulus bifidus',\n",
+       "       'Foliage Rating.8', 'Flowering Rating.8',\n",
+       "       'Pest Tolerance/Disease Resistance Rating.8', 'Vigor Rating.8',\n",
+       "       'Overall Appearance Rating.8', 'Monardella villosa', 'Foliage Rating.9',\n",
+       "       'Flowering Rating.9', 'Pest Tolerance/Disease Resistance Rating.9',\n",
+       "       'Vigor Rating.9', 'Overall Appearance Rating.9',\n",
+       "       'Penstemon 'Margarita BOP'', 'Foliage Rating.10', 'Flowering Rating.10',\n",
        "       'Pest Tolerance/Disease Resistance Rating.10', 'Vigor Rating.10',\n",
-       "       'Overall Appearance Rating.10', 'Penstemon 'Margarita BOP'',\n",
+       "       'Overall Appearance Rating.10', 'Sisyrinchium bellum',\n",
        "       'Foliage Rating.11', 'Flowering Rating.11',\n",
        "       'Pest Tolerance/Disease Resistance Rating.11', 'Vigor Rating.11',\n",
        "       'Overall Appearance Rating.11'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "# Load the CSV into a DataFrame\n",
-    "df = pd.read_csv('gd-evals.csv')\n",
+    "df = pd.read_csv('gd-evals-2.csv')\n",
     "\n",
     "# Identify columns containing \"Comments\" and drop them, plus additional 8 columns at end\n",
     "df_no_comments = df.drop(columns=[col for col in df.columns if 'Comments' in col])\n",
@@ -64,30 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Achillea millefolium (Yarrow)',\n",
-       " 'Asclepias speciosa (Showy Milkweed)',\n",
-       " 'Bouteloua',\n",
-       " 'Carex pansa',\n",
-       " 'Eriogonum umbellatum',\n",
-       " 'Eschscholzia californica',\n",
-       " 'Festuca californica',\n",
-       " 'Festuca idahoensis',\n",
-       " 'Mimulus bifidus',\n",
-       " 'Monardella villosa',\n",
-       " \"Penstemon 'Margarita BOP'\"]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (837911348.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[17], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    return (parts[0][0] + (parts[1][0] if len(parts) > 1 else pass)).lower()\u001b[0m\n\u001b[0m                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
+   "source": [
+    "def get_abbreviation(species):\n",
+    "    # Split by space and remove any common name in parentheses\n",
+    "    parts = species.split(' ')[0:2]\n",
+    "    # If there's a second part (species name), use its first letter. Otherwise, use the first letter of the genus twice.\n",
+    "    return parts[0][0] + (parts[1][0] if len(parts) > 1 else \"\").lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Extract the plant species names\n",
     "plant_species_cols = [col for col in df_no_comments.columns if 'Rating' not in col and col not in ['Timestamp', 'Evaluator']]\n",
@@ -99,7 +101,7 @@
     "dfs = []\n",
     "\n",
     "# Iterate through each plant species column and reshape\n",
-    "for idx, species_col in enumerate(plant_species_cols[:-1]):  # Exclude the last column since it's not a species name\n",
+    "for idx, species_col in enumerate(plant_species_cols):  # Exclude the last column since it's not a species name\n",
     "    # Extract columns for this species\n",
     "    subset_cols = df_no_comments.columns[idx*5 + 3: idx*5 + 8].tolist()\n",
     "    subset_df = df_no_comments[['Timestamp', 'Evaluator'] + subset_cols].copy()\n",
@@ -122,7 +124,31 @@
     "# Reorder columns\n",
     "adjusted_final_df = adjusted_final_df[['Timestamp', 'Evaluator', 'Species', 'Rating Category', 'Rating']]\n",
     "\n",
-    "adjusted_final_df.to_csv('gd-evals-clean.csv')"
+    "abbreviations = np.vectorize(get_abbreviation)(adjusted_final_df['Species'])\n",
+    "\n",
+    "adjusted_final_df['Species'] = abbreviations\n",
+    "\n",
+    "adjusted_final_df.to_csv('gd-evals-clean-2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['am', 'am', 'am', ..., 'sb', 'sb', 'sb'], dtype='<U10')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abbreviations"
    ]
   }
  ],
@@ -142,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
