finished recreating greendeck_ratings

--- a/gd-clean.ipynb
+++ b/gd-clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,18 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (837911348.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[17], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    return (parts[0][0] + (parts[1][0] if len(parts) > 1 else pass)).lower()\u001b[0m\n\u001b[0m                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_abbreviation(species):\n",
     "    # Split by space and remove any common name in parentheses\n",
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +92,9 @@
     "dfs = []\n",
     "\n",
     "# Iterate through each plant species column and reshape\n",
-    "for idx, species_col in enumerate(plant_species_cols):  # Exclude the last column since it's not a species name\n",
+    "for idx, species_col in enumerate(plant_species_cols):\n",
     "    # Extract columns for this species\n",
-    "    subset_cols = df_no_comments.columns[idx*5 + 3: idx*5 + 8].tolist()\n",
+    "    subset_cols = df_no_comments.columns[idx*6 + 3: idx*6 + 8].tolist()\n",
     "    subset_df = df_no_comments[['Timestamp', 'Evaluator'] + subset_cols].copy()\n",
     "    \n",
     "    # Rename columns for melting\n",
@@ -133,22 +124,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Evaluator</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Rating Category</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10175</th>\n",
+       "      <td>4/22/2021</td>\n",
+       "      <td>Haven Kiers</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Foliage</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10176</th>\n",
+       "      <td>4/22/2021</td>\n",
+       "      <td>Hunter Ottman</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Foliage</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10177</th>\n",
+       "      <td>4/22/2021</td>\n",
+       "      <td>Min Kyaw</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Foliage</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10178</th>\n",
+       "      <td>4/23/2021</td>\n",
+       "      <td>Haven Kiers</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Foliage</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10179</th>\n",
+       "      <td>4/23/2021</td>\n",
+       "      <td>Haven Kiers</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Foliage</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12205</th>\n",
+       "      <td>10/6/2023 9:28:24</td>\n",
+       "      <td>Davon chen</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Overall Appearance</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12206</th>\n",
+       "      <td>10/6/2023 9:28:25</td>\n",
+       "      <td>Stella Yu</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Overall Appearance</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12207</th>\n",
+       "      <td>10/6/2023 9:28:40</td>\n",
+       "      <td>Adriana</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Overall Appearance</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12208</th>\n",
+       "      <td>10/6/2023 9:28:45</td>\n",
+       "      <td>Emilio Barrera</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Overall Appearance</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12209</th>\n",
+       "      <td>10/6/2023 9:28:50</td>\n",
+       "      <td>Annabella Del Rosario</td>\n",
+       "      <td>Ec</td>\n",
+       "      <td>Overall Appearance</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2035 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['am', 'am', 'am', ..., 'sb', 'sb', 'sb'], dtype='<U10')"
+       "               Timestamp              Evaluator Species     Rating Category  \\\n",
+       "10175          4/22/2021            Haven Kiers      Ec             Foliage   \n",
+       "10176          4/22/2021          Hunter Ottman      Ec             Foliage   \n",
+       "10177          4/22/2021               Min Kyaw      Ec             Foliage   \n",
+       "10178          4/23/2021            Haven Kiers      Ec             Foliage   \n",
+       "10179          4/23/2021            Haven Kiers      Ec             Foliage   \n",
+       "...                  ...                    ...     ...                 ...   \n",
+       "12205  10/6/2023 9:28:24             Davon chen      Ec  Overall Appearance   \n",
+       "12206  10/6/2023 9:28:25              Stella Yu      Ec  Overall Appearance   \n",
+       "12207  10/6/2023 9:28:40                Adriana      Ec  Overall Appearance   \n",
+       "12208  10/6/2023 9:28:45         Emilio Barrera      Ec  Overall Appearance   \n",
+       "12209  10/6/2023 9:28:50  Annabella Del Rosario      Ec  Overall Appearance   \n",
+       "\n",
+       "       Rating  \n",
+       "10175     3.0  \n",
+       "10176     3.0  \n",
+       "10177     3.0  \n",
+       "10178     3.0  \n",
+       "10179     3.0  \n",
+       "...       ...  \n",
+       "12205     1.0  \n",
+       "12206     1.0  \n",
+       "12207     1.0  \n",
+       "12208     2.0  \n",
+       "12209     1.0  \n",
+       "\n",
+       "[2035 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abbreviations"
+    "adjusted_final_df[adjusted_final_df['Species'] == \"Ec\"]"
    ]
   }
  ],
